--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,6 +1,7 @@
 * {
 	margin: 0px;
 	box-sizing: border-box;
+	/* color: rgb(60, 54, 54) ; */
 }
 
 /* Header */
@@ -60,6 +61,8 @@ header {
 	border-bottom: 1px solid black;
 	padding-bottom: 1rem;
 	cursor: pointer;
+	display: flex;
+	flex-direction: column;
 }
 .sub {
 	margin-bottom: 0.2rem;
@@ -160,6 +163,7 @@ header {
 	width: 2rem;
 }
 .fav img {
+	margin-bottom: 0.3rem;
 	height: 1.5rem;
 	width: 1.5rem;
 }
