Upvotes, Downvotes, Favorite
Added upvote, downvote and favorites and sorted responses according to it.

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -176,6 +176,11 @@ header {
 	margin-left: 1rem;
 }
 
+.favSelected {
+	background-color: #ecf198;
+	border-radius: 50%;
+}
+
 /* Button */
 .btn {
 	background-color: #008e9b;
